--- a/lab_2/djangomongo/templates/messages.html
+++ b/lab_2/djangomongo/templates/messages.html
@@ -23,7 +23,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">Messages</a>
+				<a class="navbar-brand" href="#">Messenger</a>
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
@@ -95,7 +95,8 @@
 	<div class="panel panel-default">
 		<div class="panel-heading"><h2>{{ title }}</h2></div>
 		<div class="panel-body">
-			<h3>Number of results: {{ number_of_messages }}</h3>
+			<h3>Number of results: <u>{{ number_of_messages }}</u></h3>
+			<h5>There are <u>{{ messages_count }}</u> messages in the system.</h5>
 		</div>
 		<table class="table table-striped table-bordered table-hover">
 			<thead class="thead-inverse">
@@ -119,7 +120,10 @@
 					<td class="col-md-3">{{ m.title }}</td>
 					<td class="col-md-4">{{ m.body }}</td>
 					<td class="col-md-1 text-center text-danger">
-						<a href="#" class="btn btn-danger">Delete</a>
+						<form action="/delete_message/" method="post">
+							<input type="hidden" name="_id" value="{{ m | id }}">
+							<input type="submit" class="btn btn-danger" value="Delete">
+						</form>
 					</td>
 				</tr>
 			{% endfor %}
@@ -128,5 +132,11 @@
 	</div>
 	{# MESSAGES END	#}
 </div>
+<footer class="footer">
+	<div class="container">
+		<p class="text-muted text-center"> Created by Andrii Abramov</p>
+		<p class="text-center text-muted">&copy; 2016</p>
+	</div>
+</footer>
 </body>
 </html>
