--- a/lab_2/djangomongo/templates/users.html
+++ b/lab_2/djangomongo/templates/users.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	{% load mongo_tags %}
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<title>All users</title>
@@ -21,7 +22,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">Messages</a>
+				<a class="navbar-brand" href="#">Messenger</a>
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
@@ -42,24 +43,33 @@
 		</div>
 		<div class="panel-body">
 			<h3>List of all available users</h3>
+			<h5>There are <u>{{ users_count }}</u> users in the system.</h5>
 		</div>
 		<table class="table table-striped table-bordered table-hover">
 			<thead class="thead-default">
 			<tr class="row">
-				<th class="col-md-8">Name</th>
+				<th class="col-md-5">Name</th>
 				<th class="col-md-4">Age</th>
+				<th class="col-md-3">Average words in message</th>
 			</tr>
 			</thead>
 			<tbody>
 			{% for u in users %}
 				<tr class="row">
-					<td class="col-md-8">{{ u.name }}</td>
+					<td class="col-md-5">{{ u.name }}</td>
 					<td class="col-md-4">{{ u.age }}</td>
+					<td class="col-md-3">{{ u.average }}</td>
 				</tr>
 			{% endfor %}
 			</tbody>
 		</table>
 	</div>
 </div>
+<footer class="footer">
+	<div class="container">
+		<p class="text-center text-muted">Created by Andrii Abramov</p>
+		<p class="text-center text-muted">&copy; 2016</p>
+	</div>
+</footer>
 </body>
 </html>
